--- a/muisc-project/templates/base.html
+++ b/muisc-project/templates/base.html
@@ -1,14 +1,15 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>{% block title %}{% endblock title %}</title>
 </head>
 
 <body>
-    ز
+
 </body>
 
 </html>
