--- a/muisc-project/templates/includes/header.html
+++ b/muisc-project/templates/includes/header.html
@@ -1,19 +1,22 @@
-<div class="px-4 pt-5 my-5 text-center border-bottom">
-    <h1 class="display-4 fw-bold text-white">WHAT IS LIFE MUSIC</h1>
-    <div class="col-lg-6 mx-auto">
-        <p class="lead mb-4 text-white">In Life Music you can Explore in many playlists and users...<br>You can also
-            find friends who have the same musical taste and share your playlists together, and you can leave comments
-            and like each other's songs. <br>
-            Isn't it great? </p>
-        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-            <button type="button" class="btn btn-warning btn-lg px-4 me-sm-3">Listen & Explore Playlists</button>
-            <button type="button" class="btn btn-outline-warning btn-lg px-4">Explore Users</button>
+<div class="px-2">
+    <div class="px-4 pt-5 text-center border-bottom my-header-bg">
+        <h1 class="display-4 fw-bold text-white">WHAT IS LIFE MUSIC</h1>
+        <div class="col-lg-6 mx-auto">
+            <p class="lead mb-4 text-white">In Life Music you can Explore in many playlists and users...<br>You can also
+                find friends who have the same musical taste and share your playlists together, and you can leave
+                comments
+                and like each other's songs. <br>
+                Isn't it great? </p>
+            <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
+                <button type="button" class="btn btn-warning btn-lg px-4 me-sm-3">Listen & Explore Playlists</button>
+                <button type="button" class="btn btn-outline-warning btn-lg px-4">Explore Users</button>
+            </div>
         </div>
-    </div>
-    <div class="overflow-hidden" style="max-height: 30vh;">
-        <div class="container px-5">
-            <img src="../../static/img/playlists.jpg" class="img-fluid border rounded-3 shadow-lg mb-4 my-img"
-                alt="Example image" width="500" height="500" loading="lazy">
+        <div class="overflow-hidden" style="max-height: 30vh;">
+            <div class="container px-5">
+                <img src="../../static/img/playlists.jpg" class="img-fluid border rounded-3 shadow-lg mb-4 my-img"
+                    alt="Example image" width="500" height="500" loading="lazy">
+            </div>
         </div>
     </div>
 </div>
