--- a/muisc-project/templates/includes/navbar.html
+++ b/muisc-project/templates/includes/navbar.html
@@ -11,6 +11,8 @@
                 <ul class="navbar-nav col-lg-6 justify-content-lg-center">
                     <li class="nav-item">
                         <a class="nav-link active text-warning" aria-current="page" href="#">Home</a>
+                        {% block links %}
+                        {% endblock links %}
                     </li>
                 </ul>
                 <div class="d-lg-flex col-lg-3 justify-content-lg-end">
