--- a/muisc-project/accounts/templates/accounts/login/otp.html
+++ b/muisc-project/accounts/templates/accounts/login/otp.html
@@ -1,6 +1,10 @@
 {%extends "base.html"%}
 {% load static %}
 
+{% block title %}
+Otp
+{% endblock title %}
+
 {% block link %}
 <link rel="stylesheet" href="{% static 'css/otp.css' %}">{% endblock link %}
 
