--- a/muisc-project/accounts/templates/accounts/login/login.html
+++ b/muisc-project/accounts/templates/accounts/login/login.html
@@ -6,7 +6,7 @@ LogIn
 {% endblock title %}
 
 {% block link %}
-<link rel="stylesheet" href="{% static 'css/login.css' %}">{% endblock link %}
+<link rel="stylesheet" href="{% static 'css/login-signin.css' %}">{% endblock link %}
 
 
 {% block links %}
