--- a/muisc-project/accounts/templates/accounts/signup/signup.html
+++ b/muisc-project/accounts/templates/accounts/signup/signup.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block title %}
-SignIn
+SignUp
 {% endblock title %}
 
 {% block link %}
@@ -24,7 +24,7 @@ SignIn
 <div class="d-flex justify-content-center my-5 py-5 mb-5">
 
     <div class="card bg-dark">
-        <a class="singup">Login</a>
+        <a class="singup">SignUp</a>
         <div class="inputBox1">
             <input type="text" required="required">
             <span class="user">Email</span>
