--- a/muisc-project/accounts/templates/accounts/home/home.html
+++ b/muisc-project/accounts/templates/accounts/home/home.html
@@ -1,20 +1,53 @@
 {%extends 'base.html'%}
-
+{%load static %}
 
 {% block title %}
 Home
 {% endblock title %}
-
+{% block link %}
+<link rel="stylesheet" href="{% static 'css/mystyle.css' %}">{% endblock link %}
 {% block links %}
 <li class="nav-item">
-    <a class="nav-link active text-warning" aria-current="page" href="#">PlayLists</a>
+    <a class="nav-link text-warning" aria-current="page" href="#">PlayLists</a>
 </li>
 <li class="nav-item">
-    <a class="nav-link active text-warning" aria-current="page" href="#">Users</a>
+    <a class="nav-link text-warning" aria-current="page" href="#">Users</a>
 </li>
+
+
+
+
 {% endblock links %}
+
+
+{% block button %}
+<button class="btn btn-warning mx-2"> <a class="text-black my-text" type="button" data-bs-toggle="offcanvas"
+        data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Dashboard</a></button>
+{% endblock button %}
+
 
 {% block header %}
 {%include "includes/header.html"%}
 
 {% endblock header %}
+
+{% block content %}
+
+<div class="offcanvas offcanvas-end bg-dark" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+    <div class="offcanvas-header">
+        <h5 class="offcanvas-title text-white" id="offcanvasScrollingLabel">Dashboard</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body">
+        <ul class="navbar-nav col-lg-6 justify-content-lg-center">
+            <li class="nav-item">
+                <a class="nav-link  text-warning" aria-current="page" href="#">Likes</a>
+                <a class="nav-link  text-warning" aria-current="page" href="#">Comments</a>
+                <a class="nav-link  text-warning" aria-current="page" href="#">Playlists</a>
+                <p class="mb-2 text-warning">_____________________</p>
+                <a class="btn btn-warning text-black " aria-current="page" href="#">LogOut</a>
+            </li>
+        </ul>
+    </div>
+</div>
+{% endblock content %}
