feat: all pages have completed

--- a/muisc-project/accounts/templates/accounts/myplaylists/myplaylists.html
+++ b/muisc-project/accounts/templates/accounts/myplaylists/myplaylists.html
@@ -72,7 +72,19 @@ All Playlists
                 </div>
             </div>
         </div>
+        <div class="col">
+            <a href="" class="my-text">
+                <div class="card h-100 bg-dark">
+                    <img src="../../../../static/img/add.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title text-warning">ADD PLAYLIST</h5>
+                    </div>
+                </div>
+            </a>
+
+        </div>
     </div>
 </div>
 
+<br><br><br><br><br><br><br><br><br><br>
 {% endblock content %}
