--- a/muisc-project/templates/base.html
+++ b/muisc-project/templates/base.html
@@ -8,6 +8,9 @@
     <title>{% block title %}{% endblock title %}</title>
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     <link rel="stylesheet" href="{% static 'css/mystyle.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap-icons.css' %}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+
     {% block link %}{% endblock link %}
 </head>
 
@@ -19,7 +22,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarsExample11" aria-controls="navbarsExample11" aria-expanded="false"
                     aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                    <span class="bi bi-list text-warning"></span>
                 </button>
 
                 <div class="collapse navbar-collapse d-lg-flex" id="navbarsExample11">
@@ -54,7 +57,14 @@
 
 
     {%include "includes/footer.html"%}
+    <script src="{%static 'js/popper.js'%}"></script>
+
     <script src="{%static 'js/bootstrap.js'%}"></script>
+
+    {% block addscript %}
+
+    {% endblock addscript %}
+
 </body>
 
 </html>
