--- a/muisc-project/templates/base.html
+++ b/muisc-project/templates/base.html
@@ -29,14 +29,14 @@
                     <a class="navbar-brand col-lg-3 me-0 text-warning" href="#">Life Music</a>
                     <ul class="navbar-nav col-lg-6 justify-content-lg-center">
                         <li class="nav-item">
-                            <a class="nav-link text-warning" aria-current="page" href="#">Home</a>
+                            <a class="nav-link text-warning" aria-current="page" href="{%url 'home'%}">Home</a>
                         </li>
                         {% block links %}
                         {% endblock links %}
                     </ul>
                     <div class="d-lg-flex col-lg-3 justify-content-lg-end">
-                        <button class="btn btn-warning mx-2">SignUp</button>
-                        <button class="btn btn-warning mx-2">LogIn</button>
+                        <a class="btn btn-warning mx-2 " href="{% url 'signup'%}">SignUp</a>
+                        <a class="btn btn-warning mx-2" href="{%url 'login'%}">LogIn</a>
                         {% block button %}
                         {% endblock button %}
                     </div>
